tests/files/type_checker_tests/should_pass/144.cmdr
//Test that not equals operation type checks
x = "hi" != "bye";
