tests/files/type_checker_tests/should_fail/096.cmdr
//Should fail if not operation on something not a bool
x = !"hi";
